--- a/customized.css
+++ b/customized.css
@@ -127,7 +127,7 @@ input{
     width: 90%;
     height: 20vh;
     margin: 0 auto;
-    z-index: 2;
+    z-index: 1;
     background-color: white;
     position: relative;
     text-align: center;
@@ -556,6 +556,7 @@ button:active{
     .active{
         transition: all 0.5s ease-in;
         transform: translateX(0);
+        z-index: 5;
     }
     .active1{
         transition: all 0.5s ease-in;
@@ -631,7 +632,9 @@ button:active{
         position: absolute;
         transition: .5s;
     }
-    
+    .orderhere p{
+        display: none;
+    }
     .cake1{
         position: fixed;
         bottom:10%;
