--- a/cart.css
+++ b/cart.css
@@ -209,7 +209,7 @@ button:focus{
     margin-bottom: 20px;
 }
 .card{
-    height: 100vh;
+    height: 750px;
     display: flex;
     background-color: rgb(201, 137, 201);
     border-radius: 10px;
@@ -227,7 +227,7 @@ button:focus{
 .cake img{
     margin: 70px 0;
     width: 100%;
-    height: 70vh;
+    height: 650px;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -293,7 +293,12 @@ button:focus{
     font: 10px "Lato" ;
 }
 
-
+#size{
+    font-size: 23px;
+}
+p{
+    text-align: center;
+}
 
 
 .orderForm input:nth-last-of-type(3){
