--- a/cart.css
+++ b/cart.css
@@ -426,7 +426,7 @@ transform: rotate(45deg) translate(-7px, -6px);
         display: block;
         top: 50px;
         width: 100%;
-        height: 35vh;
+        height: 280px;
         background-color: plum;
         z-index: 1;
         transform: translateX(100%);
@@ -479,6 +479,9 @@ transform: rotate(45deg) translate(-7px, -6px);
         z-index: 99;
         overflow-y: hidden;
     }
+    #lg{
+        cursor:pointer;
+    }
     #size{
         font-size: 15px;
     }
@@ -506,7 +509,7 @@ transform: rotate(45deg) translate(-7px, -6px);
 
     .card{
         display: block;
-        height: 106vh;
+        height: 750px;
         overflow-y: hidden;
     }
     .card img{
