--- a/cakepage.css
+++ b/cakepage.css
@@ -604,6 +604,7 @@ button:active{
         justify-content: center;
         align-items: center;
         margin: 0 auto;
+       
     }
     .roundCake1{
         display: flex;
@@ -612,6 +613,7 @@ button:active{
         justify-content: center;
         align-items: center;
         margin: 0 auto;
+        overflow-y: hidden;
     }
     .rollCakes{
         display: flex;
@@ -620,6 +622,7 @@ button:active{
         justify-content: center;
         align-items: center;
         margin: 0 auto;
+        overflow-y: hidden;
     }
     .dreamCake{
         display: flex;
@@ -628,12 +631,13 @@ button:active{
         justify-content: center;
         align-items: center;
         margin: 0 auto;
+        overflow-y: hidden;
     }
     .cupCake{
         display: flex;
         flex-wrap: wrap;
         width: 100%;
-       
+        overflow-y: hidden;
         justify-content: center;
         align-items: center;
         margin: 0 auto;
@@ -642,7 +646,7 @@ button:active{
         display: flex;
         flex-wrap: wrap;
         width: 100%;
-        
+        overflow-y: hidden;
         justify-content: center;
         align-items: center;
         margin: 0 auto;
