--- a/main.css
+++ b/main.css
@@ -729,7 +729,6 @@ transform: rotate(45deg) translate(-7px, -6px);
         font-size: 2rem;
         padding: 0;
         margin: 30px auto;
-        margin-top: 24vh;
         text-align: center;
     }
 
@@ -757,7 +756,7 @@ transform: rotate(45deg) translate(-7px, -6px);
 
     .new p{
         background-color:#ff9b9b ;
-        font-size: .5rem;
+        font-size: 14px;
     }
     .header {
         text-align: center;
@@ -879,4 +878,37 @@ transform: rotate(45deg) translate(-7px, -6px);
       outline: 0;
       font: 1rem "Poppins";
   }
+  
+    .mySlides {
+        margin:0 auto;
+        display: none;
+    }
+    .mySlides img {
+        width: 100%;
+        height: 170px;
+        object-fit: fill;
+    }
+
+    /* Slideshow container */
+    .slideshow-container {
+        max-width: 100%;
+        height: 300px;
+        position: relative;
+        margin: 0 auto;
+    }
+    .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 70px;
+        width: 24px;
+        padding: 5px;
+        margin-top: -22px;
+        color: black;
+        font-weight: 400;
+        font-size: 2rem;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        background-color: rgb(255, 255, 255);
+      }
 }
