--- a/main.css
+++ b/main.css
@@ -892,23 +892,23 @@ transform: rotate(45deg) translate(-7px, -6px);
     /* Slideshow container */
     .slideshow-container {
         max-width: 100%;
-        height: 300px;
+        height: 200px;
         position: relative;
         margin: 0 auto;
     }
     .prev, .next {
         cursor: pointer;
         position: absolute;
-        top: 70px;
-        width: 24px;
+        top: 80px;
+        width: 20px;
         padding: 5px;
         margin-top: -22px;
         color: black;
         font-weight: 400;
-        font-size: 2rem;
+        font-size: 1rem;
         transition: 0.6s ease;
         border-radius: 0 3px 3px 0;
         user-select: none;
-        background-color: rgb(255, 255, 255);
+        background-color: rgba(255, 255, 255, 0.1);
       }
 }
