--- a/main.css
+++ b/main.css
@@ -758,7 +758,7 @@ transform: rotate(45deg) translate(-7px, -6px);
         background-color:#ff9b9b ;
         font-size: 14px;
     }
-    .header {
+    .header{
         text-align: center;
         font-size: .7rem;
     }
@@ -892,7 +892,7 @@ transform: rotate(45deg) translate(-7px, -6px);
     /* Slideshow container */
     .slideshow-container {
         max-width: 100%;
-        height: 200px;
+        height: 180px;
         position: relative;
         margin: 0 auto;
     }
@@ -905,7 +905,7 @@ transform: rotate(45deg) translate(-7px, -6px);
         margin-top: -22px;
         color: black;
         font-weight: 400;
-        font-size: 1rem;
+        font-size: 16px;
         transition: 0.6s ease;
         border-radius: 0 3px 3px 0;
         user-select: none;
