--- a/aboutus.css
+++ b/aboutus.css
@@ -277,7 +277,7 @@ nav h1{
     }
     .sub-section{
         width: 100%;
-        height: 100vh;
+        height: 570px;
         margin: 20px auto;
         display: block;
         float: none;
