--- a/main.css
+++ b/main.css
@@ -341,13 +341,13 @@ a .cheesecake{
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: black;
+  color: rgb(255, 255, 255);
   font-weight: 400;
   font-size: 2rem;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* Position the "next button" to the right */
@@ -358,8 +358,8 @@ a .cheesecake{
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  color: white;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: rgb(0, 0, 0);
 }
 .dt{
   position: absolute;
