--- a/cart.css
+++ b/cart.css
@@ -5,8 +5,26 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
 
 body{
     font-family: "Poppins";
