--- a/cart.css
+++ b/cart.css
@@ -289,7 +289,7 @@ button:focus{
     border-radius: 10px;
     font-family: "Poppins";
     font-size: 20px;
-    color: white;
+    color: rgb(79, 79, 79);
 }
 #info{
     cursor:text;
