--- a/cakepage.css
+++ b/cakepage.css
@@ -174,6 +174,9 @@ nav h1{
     color: white;
     overflow: hidden;
 }
+.swal-icon{
+    overflow-y: hidden;
+}
 .cake img{
     width: 20vw;
     height: 25vh;
@@ -506,7 +509,7 @@ button:active{
 }
  
 
-@media screen and (max-width: 768px){
+@media only screen and (max-width: 800px) and (min-width: 360px){
     *{
         margin: 0;
         padding: 0;
@@ -555,8 +558,6 @@ button:active{
         transition: transform 0.5s ease-in;
         z-index: 2;
     }
-
-    
     .cakes ul.navlinks li{
         opacity: 0;
         background-color: #ffffff00;
