--- a/cart.css
+++ b/cart.css
@@ -255,7 +255,7 @@ button:focus{
     display: block;
     width: 50%;
     height: 60vh;
-    margin: 20px;
+    margin: 20px;+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
     
 }
 .order h3{
@@ -271,7 +271,7 @@ button:focus{
 
 .orderForm{
     margin: 0 auto;
-    margin-top: 10vh;
+    margin-top: 40px;
     display: block;
     width: 70%;
 }
@@ -378,6 +378,9 @@ p{
     border-bottom: solid 2px rgb(184, 116, 184);
     box-shadow: 2px 5px 5px rgb(184, 116, 184);
 }
+.swal-icon{
+    overflow-y: hidden;
+}
 
 
 @keyframes navLinkFade {
@@ -405,7 +408,7 @@ transform: rotate(45deg) translate(-7px, -6px);
 
 
 
-@media screen and (max-width: 800px){
+@media only screen and (max-width: 768px) and (min-width: 360px){
     *{
         margin: 0;
         padding: 0;
@@ -527,11 +530,11 @@ transform: rotate(45deg) translate(-7px, -6px);
 
     .card{
         display: block;
-        height: 750px;
+        height: 785px;
         overflow-y: hidden;
     }
     .card img{
-        height: 25vh;
+        height: 200px;
     }
 
     .cake{
@@ -550,6 +553,7 @@ transform: rotate(45deg) translate(-7px, -6px);
         width: 90%;
         height: 90vh;
         margin: 0 auto;
+        overflow-y: hidden;
     }
     .order h3{
         font-size: 1.2rem;
@@ -562,11 +566,12 @@ transform: rotate(45deg) translate(-7px, -6px);
     .orderForm #info{
         font-size: 10px;
         height: 34px;
+       
     }
     .orderForm{
         display: block;
         width: 70%;
-        margin-top: 5vh;
+        margin-top: 10px;
         justify-self: center;
         align-items: center;
         z-index: 1;
@@ -578,6 +583,213 @@ transform: rotate(45deg) translate(-7px, -6px);
     
     .orderForm input:nth-last-of-type(3){
         width: 75%;
+        margin: 0 auto;
+    }
+    .orderForm p{
+        width: 100%;
+        font-size: 12px;
+    }
+    
+    .orderForm #date{
+        height: 34px;
+        text-align: center;
+        font-size: 10px;
+    }
+    .orderForm #date::placeholder{
+        white-space:pre-line; 
+        text-align: center;
+        position: relative;
+        top: 0;
+    }
+
+    .orderForm i{
+        margin: 0 5px;
+        font-size: .5rem;
+    }
+    .load{
+        height: 85vh;
+    }
+    .loads{
+        margin-bottom: 50vh;
+    }
+}
+@media only screen and (max-width: 800px) and (min-width: 768px){
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        overflow-x: hidden;
+       
+    }
+    body{
+        position: relative;
+    }
+    .logo img{
+        width: 148px;
+        height: 100px;
+        margin-left: 10px;
+    }
+    .logo h1{
+        width: 100%;
+        font-size: 2.5rem;
+    }
+    .burger{
+        display: block;
+    }
+    nav{
+        top: 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        min-height: 8vh;
+        z-index: 1;
+        background-color: plum;
+    }
+    .nav-link{
+       
+        position: absolute;
+        display: block;
+        top: 50px;
+        width: 100%;
+        height: 280px;
+        background-color: plum;
+        z-index: 1;
+        transform: translateX(100%);
+    }
+    .nav-link li{
+        display: flex;
+        width: 100%;
+        margin: 40px auto;
+        justify-content: center;
+        align-items: center;
+    }
+    .nav-link a{
+        text-align: center;
+        color:white;
+    }
+    .nav-link a h4{
+        width: 50vw;
+        font-size: 1.3rem;
+        transition: all .5s ease
+    }
+    .nav-active {
+        background-color:  plum;
+        transform: translateX(0%);
+        overflow-y: hidden;
+    }
+    .select{
+        width: 100%;
+        margin: 0;
+       
+    }
+
+    .menu{
+        display: flex;
+        width: 100vw;
+        overflow-y: hidden;
+    }
+
+    .menu p{
+        font-size: 1.3rem;
+    }
+    .arrow{
+        display: none;
+    }
+    .dropdown{
+        position: absolute;
+        display: block;
+        margin: 0 auto;
+        top: 5vh;   
+        width: 100%;
+        z-index: 99;
+        overflow-y: hidden;
+    }
+    #lg{
+        cursor:pointer;
+    }
+    #size{
+        font-size: 15px;
+    }
+    #flavors{
+        font-size: 15px;
+    }
+
+    .dropdown div{
+        width: 100%;
+    }
+
+    .dropdown div p{
+        display: flex;
+        margin: 0 auto;
+        width: 20vh;
+        font-size: 12px;
+        text-align: center;
+    }
+    .active{
+        width: 100%;
+        right: 0;
+        background-color: plum;
+        transition: all 1s ease;
+    }
+
+    .card{
+        display: block;
+        height: 899px;
+        overflow-y: hidden;
+    }
+    .card img{
+        height: 200px;
+    }
+
+    .cake{
+        width: 100%;
+        height: 30vh;
+        margin: 0 auto;
+        overflow-y: hidden;
+    }
+    .cake img{
+        width:90%;
+        height: 400px;
+        margin: 20px auto;
+    }
+    .order{
+        position: relative;
+        display: block;
+        width: 90%;
+        height: 90vh;
+        margin: 0 auto;
+        overflow-y: hidden;
+    }
+    .order h3{
+        font-size: 1.2rem;
+    }
+
+    .order h3, .order p{
+        margin: 10px auto;
+        text-align: center;
+    }
+    .orderForm #info{
+        font-size: 10px;
+        height: 34px;
+       
+    }
+    .orderForm{
+        display: block;
+        width: 70%;
+        margin-top: 10px;
+        justify-self: center;
+        align-items: center;
+        z-index: 1;
+        overflow-y: hidden;
+    }
+    .orderForm input[type=text], input[type=tel]{
+        color: black;
+        height:30px;
+    }
+    
+    .orderForm input:nth-last-of-type(3){
+        width: 89%;
         margin: 0 auto;
     }
     .orderForm p{
