--- a/aboutus.css
+++ b/aboutus.css
@@ -169,7 +169,7 @@ nav h1{
 }
 .content h1{
     margin-top: -40px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
 }
 .content p{
@@ -184,7 +184,7 @@ nav h1{
 }
 .cards img{
     margin-top: 20px;
-    width: 600px;
+    width: 700px;
     height: 400px;
     margin-left: -400px;
 }
@@ -296,17 +296,19 @@ nav h1{
     }
     .sub-section{
         width: 100%;
-        height: 570px;
+        height: 600px;
         margin: 20px auto;
         display: block;
         float: none;
         border-radius: 0;
     }
+
     .cards img{
         width: 300px;
         height: 200px;
-        margin-top: 20px;
-        margin-left: 30px;
+        display: block;
+        margin: 0 auto;
+        padding: 20px;
     }
     .content{
         width: 90%;
@@ -316,9 +318,13 @@ nav h1{
         margin-top: 60px;
         float: none;
     }
+    #pers{
+        height: 800px;
+    }
     .cards #right{
         float: none;
-        margin-right: -450px;
+        display: block;
+       margin: 0 auto;
     }
     #foot{
         border-radius: 0;
@@ -326,6 +332,10 @@ nav h1{
         display: flex;
         justify-content: center;
     }
+    #two{
+        padding: 20px;
+    }
+
 
 }
 @media only screen and (max-width: 800px) and (min-width: 768px){
@@ -404,7 +414,7 @@ nav h1{
         width: 100%;
     }
     .sub-section{
-       height: 300px;
+       height: 500px;
     }
     .cards img{
         width: 300px;
@@ -417,6 +427,9 @@ nav h1{
         width: 65%;
         margin-left: -20px;
     }
+    .content h1{
+        font-size: 24px;
+    }
     .content p{
         font-size: 14px;
     }
@@ -424,6 +437,7 @@ nav h1{
         margin-top: 60px;
         float: left;
     }
+
     .cards #right{
         float: right;
         margin-right: -210px;
