--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ body{
     margin: -10px auto;
     width: 100%;
     color: white;
-    font-size: 50px;
+    font-size: 3rem;
     font-family: "Dancing Script";
 }
 p.small{
