--- a/aboutus.css
+++ b/aboutus.css
@@ -163,6 +163,7 @@ nav h1{
     justify-content:space-around ;
     border-radius: 30px;
 }
+
 .content{
     width: 50%;
     color:white;
@@ -296,7 +297,7 @@ nav h1{
     }
     .sub-section{
         width: 100%;
-        height: 600px;
+        height: 630px;
         margin: 20px auto;
         display: block;
         float: none;
@@ -314,17 +315,21 @@ nav h1{
         width: 90%;
         margin: 40px auto;
     }
+    /* #second{
+        height: 700px;
+    } */
     .sub-section:nth-last-of-type(3){
         margin-top: 60px;
         float: none;
     }
     #pers{
-        height: 800px;
+        height: 840px;
     }
     .cards #right{
         float: none;
         display: block;
        margin: 0 auto;
+       margin-top: -60px;
     }
     #foot{
         border-radius: 0;
